--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,12 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".ResultadosSimulacion"></activity>
+        <activity android:name=".frame_11"></activity>
+        <activity android:name=".frame_5" />
+        <activity android:name=".crear_cuenta" />
+        <activity android:name=".frame_10" />
+        <activity android:name=".confirmar_practica" />
+        <activity android:name=".ResultadosSimulacion" />
         <activity android:name=".PreguntaSimulacro" />
         <activity android:name=".confirmarsimulacion">
             <intent-filter>
