--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,7 +9,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".frame_11"></activity>
+        <activity android:name=".Eliminar_esto"></activity>
+        <activity android:name=".frame_11" />
         <activity android:name=".frame_5" />
         <activity android:name=".crear_cuenta" />
         <activity android:name=".frame_10" />
