--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,24 +9,25 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.AppCompat.DayNight.NoActionBar">
-        <activity android:name=".Pruebas_Firebase">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+        <activity android:name=".Olvidar_Contrasena_Activity"></activity>
+        <activity android:name=".Pruebas_Firebase"></activity>
         <activity android:name=".MainActivity" />
         <activity android:name=".frame_11" />
         <activity android:name=".frame_5" />
-        <activity android:name=".crear_cuenta" />
+        <activity android:name=".crear_cuenta">
+
+        </activity>
         <activity android:name=".frame_10" />
         <activity android:name=".ResultadosSimulacion" />
         <activity android:name=".confirmar_practica" />
         <activity android:name=".PreguntaSimulacro" />
         <activity android:name=".confirmarsimulacion" />
         <activity android:name=".LoginActivity">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
 
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
         </activity>
     </application>
 
